# youcef-sandouq-fatwa

./: .gitignore  capacitor.config.ts  generate-icon.ps1  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml  tauri-build.yml
public/: icon_generator.html
scripts/: verify-icons.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: QuestionForm.tsx  SplashScreen.tsx
src/hooks/: useAnnouncements.ts  useBrowserNotifications.ts  useOfflineQuestions.ts  useRealtimeNotifications.ts  useSettings.ts  useVideos.ts
src/lib/: i18n.ts
src/pages/: Admin.tsx  Index.tsx  Install.tsx
supabase/functions/send-notification/: index.ts
temp_unzip/resources/app/: nativefier.json  package.json
