[package]
name = "sandouq-fatwa"
version = "1.2.0"
description = "صندوق الفتوى مسجد الإيمان - 150 مسكن"
authors = ["Youcef HAMOUALI"]
edition = "2021"

[lib]
name = "sandouq_fatwa_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
